[project.urls]
issues        = "https://github.com/BrokenSource/Upscalin/issues"
repository    = "https://github.com/BrokenSource/Upscalin"
documentation = "https://brokensrc.dev/upscalin"
homepage      = "https://brokensrc.dev"

[project]
name        = "upscalin"
version     = "0.0.0"
description = "A Convenience Multi-Upscalers for Video, Images. Batch Processing, Multithreaded."
authors     = [{name="Tremeschin", email="29046864+Tremeschin@users.noreply.github.com"}]
readme      = "Readme.md"
license     = "AGPL-3.0"
dependencies = [
    "broken-source>=0.0.0",
]

[tool.rye]
managed = true

[project.scripts]
upscalin = "Upscalin.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["Upscalin"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
