[project.urls]
Changelog = "https://brokensrc.dev/news/category/releases"
GitHub    = "https://github.com/BrokenSource/Upscalin"
Funding   = "https://brokensrc.dev/about/sponsors"
Contact   = "https://brokensrc.dev/about/contact"
Credits   = "https://brokensrc.dev/about/credits"
License   = "https://brokensrc.dev/about/license"
Download  = "https://brokensrc.dev/get/releases"
Docs      = "https://brokensrc.dev/upscalin"
Homepage  = "https://brokensrc.dev"

[project]
name        = "upscalin"
version     = "0.0.0"
description = "A Convenience Multi-Upscalers for Video, Images. Batch Processing, Multithreaded."
authors     = [{name="Tremeschin", email="29046864+Tremeschin@users.noreply.github.com"}]
readme      = "Readme.md"
license     = "AGPL-3.0"
dependencies = [
    "broken-source>=0.0.0",
]

[tool.rye]
managed = true

[project.scripts]
upscalin = "Upscalin.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["Upscalin"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
